Change title from 'BINGO PRO' to 'BINGO CALOA'

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <!-- PANTALLA INICIO -->
 <div id="startScreen" class="card">
-    <h2>🎰 BINGO PRO</h2>
+    <h2>🎰 BINGO CALOA</h2>
     <p>Selecciona el modo</p>
 
     <button onclick="openAdmin()">🎛 MODO ADMIN</button>
