Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ button{padding:12px 18px;margin:5px;font-size:16px;border:none;border-radius:8px
 
 <header>
 <h1>🎱 Bingo Británico 90</h1>
+<div id="historial"></div>
 <div id="bola">–</div>
 </header>
 
